--- a/index.html
+++ b/index.html
@@ -115,11 +115,12 @@
 			</div>
 			<div class="date-section__block">
 				<div class="d-inline-block">
-					<h2 class="title--special">June 11th, 2019</h2>
+					<h2 class="title--special">February 29th, 2020</h2>
 					<h3 class="date-section__place">
-						The Riverside Church<br>
-						New York, USA
+						Myeongdong, Laluche, Loirehall<br>
+						<font>명동, 라루체, 루아르홀</font>
 					</h3>
+					
 				</div>
 			</div>
 			<div id="timer" class="timer d-flex justify-content-center">
