--- a/index.html
+++ b/index.html
@@ -169,10 +169,9 @@
 							</div>
 							<div class="col-md-6 text-left">
 								<h3 class="accordion__item-subheading">When and Where</h3>
-								<p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>W Hotel, 1423 Hobart St, Pittsburgh, PA, 15217</p>
-								<p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>09:00 - 10:30, Sep 15, 2018 </p>
-								<p class="font-weight-bold">Keep it classy</p>
-								<div class="btn btn-outline-dark rounded-0 px-2 py-1">View on map</div>
+								<p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>서울특별시 중구 퇴계로 18길 46 라루체 (구)서울특별시 중구 남산동 1가 13-6 라루체 </p>
+								<p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>2020년 2월 29일 16시 </p>
+								
 							</div>
 						</div>
 					</div>
