--- a/index.html
+++ b/index.html
@@ -151,10 +151,10 @@
 			<div id="accordion">
 				<div class="accordion__header d-flex justify-content-center">
 					<button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-						Ceremony
+						결혼식
 					</button>
 					<button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-						Dinner
+						피로연
 					</button>
 				</div>
 				<div class="accordion__body">
@@ -166,7 +166,7 @@
 							</div>
 							<div class="col-md-6 text-left">
 								<h3 class="accordion__item-subheading">When and Where</h3>
-								<p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>서울특별시 중구 퇴계로 18길 46 라루체 (구)서울특별시 중구 남산동 1가 13-6 라루체 </p>
+								<p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>서울특별시 중구 퇴계로 18길 46 라루체<br> (구)서울특별시 중구 남산동 1가 13-6 라루체 </p>
 								<p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>2020년 2월 29일 16시 </p>
 						
 							</div>
