--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
 								<h3 class="accordion__item-subheading">When and Where</h3>
 								<p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>서울특별시 중구 퇴계로 18길 46 라루체<br> (구)서울특별시 중구 남산동 1가 13-6 라루체 </p>
 								<p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>2020년 2월 29일 16시 </p>
-									<h6 class="event__info-header font-weight-bold">*전세버스</h6>
-						<p>경기 안성 : 워치타워성서책자협회 버스 출발 13:00<br>인솔자 : 조영석(010-3933-3536)<br>이용시 미리 신청하여 주시기 바랍다다. </p>
+									<h6 class="event__info-header font-weight-bold">전세버스</h6>
+						<p>경기 안성 : 워치타워성서책자협회 버스 출발 13:00<br>인솔자 : 조영석(010-3933-3536)<br><b>*이용시 미리 신청하여 주시기 바랍니다.</b> </p>
 			
 						  </div>
 						</div>
@@ -219,9 +219,8 @@
 						<h6 class="event__info-header font-weight-bold">자가용</h6>
 					
 						<ul>
-							<li><b>강남에서 오실 때</b><br>반포대교 > 남산3호터널 > 통과 후, 쌍용 플래티넘 아파트 앞에서 우회전 > 아파트 끼고 좌회전 후 라루체 진입 </li><li></li>
-							<li><b>서울역에서 오실 때</b><br>서울역에서 퇴계로 방면으로 진입 > 회현역 > 회현사거리에서 직진 > 스테이트타워와 뉴오리엔탈호텔 사이로 우회전 > 왼쪽 첫번째 골목 라루체</li><li></li>
-							<li><b>왕십리 방향에서 오실때</b><br>왕십리역 > 퇴계로에서 남대문 방향으로 직진 > 퇴계로2가 지하차도 > 회현사거리 신세계백화점 앞에서 유턴 후 직진 > 스테이트타워와 뉴오리엔탈호텔 사이로 우회전 > 왼쪽 첫번째 골목 라루체</li>
+							<p><b>강남에서 오실 때</b><br>반포대교 > 남산3호터널 > 통과 후, 쌍용 플래티넘 아파트 앞에서 우회전 > 아파트 끼고 좌회전 후 라루체 진입 </p>			<p><b>서울역에서 오실 때</b><br>서울역에서 퇴계로 방면으로 진입 > 회현역 > 회현사거리에서 직진 > 스테이트타워와 뉴오리엔탈호텔 사이로 우회전 > 왼쪽 첫번째 골목 라루체</p>
+							<p><b>왕십리 방향에서 오실때</b><br>왕십리역 > 퇴계로에서 남대문 방향으로 직진 > 퇴계로2가 지하차도 > 회현사거리 신세계백화점 앞에서 유턴 후 직진 > 스테이트타워와 뉴오리엔탈호텔 사이로 우회전 > 왼쪽 첫번째 골목 라루체</p>
 							
 						</ul>
 					</div>
