--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 			<div class="love-story__flowers m-auto">
 				<img src="img/story-flowers.png" alt="flowers">
 			</div>
-			<h1 class="title">Love story</h1>
-			<p class="m-auto">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h1 class="title">Invitation</h1>
+			<p class="m-auto">여호와를 섬기는 두 사람이 만나 하나의 길을 걷고자합니다. 저희의 첫 발걸음을 함께 해주시기 바랍니다.</p>
 		</div>
 	</section>
 	<!-- Section Date -->
