--- a/index.html
+++ b/index.html
@@ -46,32 +46,11 @@
 						<a class="nav-link page-scroll" href="#gallery">Gallery</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link page-scroll" href="#rsvp">RSVP</a>
+						<a class="nav-link page-scroll" href="#rsvp">Message</a>
 					</li>
-					<li class="nav-item dropdown">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-							Pages
-						</a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-						  <a class="dropdown-item" href="blog.html">Blog</a>
-						  <a class="dropdown-item" href="gallery.html">Gallery</a>
-						  <a class="dropdown-item" href="rsvp.html">RSVP</a>
-						  <a class="dropdown-item" href="blog-single.html">Single Post</a>
-						</div>
-					</li>
-					<li class="nav-item d-flex ml-lg-4">
-						<a class="nav-link nav-link_social" href="#">
-							<i class="fa fa-2x fa-facebook-square"></i>
-						</a>
-						<a class="nav-link nav-link_social" href="#">
-							<i class="fa fa-2x fa-twitter-square"></i>
-						</a>
-						<a class="nav-link nav-link_social" href="#">
-							<i class="fa fa-2x fa-google-plus-square"></i>
-						</a>
-					</li>
+					
 					<li class="nav-item ml-lg-4 d-lg-none">
-						<span class="nav-link">&copy; Joseph and Sophia 2018.</span>
+						<span class="nav-link">&copy; Jinsu and Dain 2020.</span>
 					</li>
 				</ul>
 			</div>
@@ -104,7 +83,8 @@
 				<img src="img/story-flowers.png" alt="flowers">
 			</div>
 			<h1 class="title">Invitation</h1>
-			<p class="m-auto">여호와를 섬기는 두 사람이 만나 하나의 길을 걷고자합니다. 저희의 첫 발걸음을 함께 해주시기 바랍니다.</p>
+			<p class="m-auto">여호와를 섬기는 두 사람이 한 가정을 이루고자 합니다.</p>
+			<p class="m-auto">저희의 첫 발걸음을 함께 해주시기 바랍니다.</p>
 		</div>
 	</section>
 	<!-- Section Date -->
@@ -167,7 +147,7 @@
 								<p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>서울특별시 중구 퇴계로 18길 46 라루체<br> (구)서울특별시 중구 남산동 1가 13-6 라루체 </p>
 								<p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>2020년 2월 29일 16시 </p>
 									<h6 class="event__info-header font-weight-bold">전세버스</h6>
-						<p>워치타워성서책자협회 버스 출발 13:00<br>인솔자 : 조영석(010-3933-3536)<br><b>*이용시 미리 신청하여 주시기 바랍니다.</b> </p>
+						<p>워치타워성서책자협회 버스 출발 13:00<br>인솔자 : 조영석(010-3933-3536)<br><b><br>*이용시 미리 신청하여 주시기 바랍니다.</b> </p>
 			
 						  </div>
 						</div>
@@ -275,7 +255,7 @@
 					<img src="img/rsvp-flower.png" class="parallax" alt="flower">
 				</div>
 				<div class="col-sm-12 col-md-8 align-self-center">
-					<h2 class="title">RSVP</h2>
+					<h2 class="title">Message</h2>
 					<h6 class="text-uppercase font-weight-bold mb-0">Will you attend?</h6>
 					<form id="rsvp-form" action="form.php" method="post">
 						<div class="row">
