--- a/index.html
+++ b/index.html
@@ -48,9 +48,24 @@
 					<li class="nav-item">
 						<a class="nav-link page-scroll" href="#rsvp">Message</a>
 					</li>
-					
+					<li class="nav-item">
+						<a class="nav-link page-scroll" href="#">
+							Message
+						</a>
+					</li>
+					<li class="nav-item d-flex ml-lg-4">
+						<a class="nav-link nav-link_social" href="#">
+							<i class="fa fa-2x fa-facebook-square"></i>
+						</a>
+						<a class="nav-link nav-link_social" href="#">
+							<i class="fa fa-2x fa-twitter-square"></i>
+						</a>
+						<a class="nav-link nav-link_social" href="#">
+							<i class="fa fa-2x fa-google-plus-square"></i>
+						</a>
+					</li>
 					<li class="nav-item ml-lg-4 d-lg-none">
-						<span class="nav-link">&copy; Jinsu and Dain 2020.</span>
+						<span class="nav-link">&copy; Joseph and Sophia 2018.</span>
 					</li>
 				</ul>
 			</div>
