--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					
 					</li>
 					<li class="nav-item ml-lg-4 d-lg-none">
-						<span class="nav-link">&copy; Joseph and Sophia 2018.</span>
+						<span class="nav-link">&copy; Jinsu and Dain 2020.</span>
 					</li>
 				</ul>
 			</div>
@@ -265,7 +265,7 @@
 				</div>
 				<div class="col-sm-12 col-md-8 align-self-center">
 					<h2 class="title">Message</h2>
-					<h6 class="text-uppercase font-weight-bold mb-0">Will you attend?</h6>
+					<h6 class="text-uppercase font-weight-bold mb-0">Will you Give us?</h6>
 					<form id="rsvp-form" action="form.php" method="post">
 						<div class="row">
 							<div class="col-md-8 mb-3 m-md-0">
@@ -274,7 +274,11 @@
 									<input type="text" class="form-control" id="inputName" required>
 								</div>
 								<div class="form-group">
-									<label class="control-label" for="inputNumber">Contact number</label>
+									<label class="control-label" for="inputNumber">Message</label>
+									<input type="tel" class="form-control" id="inputNumber" required>
+								</div>
+									<div class="form-group">
+									<label class="control-label" for="inputNumber">Password</label>
 									<input type="tel" class="form-control" id="inputNumber" required>
 								</div>
 							</div>
@@ -296,8 +300,8 @@
 	<footer class="section">
 		<div class="container text-white position-relative">
 			<div class="footer__title">
-				<div class="text-center">Save the date</div>
-				<div class="text-center">Joseph and Sophia</div>
+				<div class="text-center">Wedding Day</div>
+				<div class="text-center">Jinsu and Dain</div>
 			</div>
 			<div class="row pb-4">
 				<div class="col-md-6 text-justify">
