--- a/index.html
+++ b/index.html
@@ -300,19 +300,12 @@
 	<footer class="section">
 		<div class="container text-white position-relative">
 			<div class="footer__title">
-				<div class="text-center">Wedding Day</div>
-				<div class="text-center">Jinsu and Dain</div>
+				<div class="text-center">Wedding Ceremony</div>
+				<div class="text-center">Jinsu&Dain</div>
 			</div>
-			<div class="row pb-4">
-				<div class="col-md-6 text-justify">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<div class="col-md-6 text-justify">
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-			</div>
+	
 		
-			<div class="copyright text-center">&copy; Copyright Jinsu and Dain 2020. All right Reserved.</div>
+			<div class="copyright text-center">&copy; Copyright Jinsu&Dain 2020. All right Reserved.</div>
 		</div>
 	</footer>
 	<script src="js/vendor/jquery.min.js"></script>
