--- a/index.html
+++ b/index.html
@@ -296,6 +296,18 @@
 			</div>
 		</div>
 	</section>
+	
+		<section class="love-story section position-relative text-center">
+		<div class="d-none d-sm-block love-story__flower-parallax position-absolute parallax">
+			<img src="img/ls-flower-prlx.png" alt="flower">
+		</div>
+		<div class="container">
+			<div class="love-story__flowers m-auto">
+				<img src="img/story-flowers.png" alt="flowers">
+			</div>
+			<h1 class="title">Invitation</h1>
+		
+
 		<div id="comments" class="comments-area">
 					    <h3 class="comments-title">
 					        Comments		
@@ -395,7 +407,8 @@
 					    </ol>
 					    
 					</div>
-
+		</div>
+	</section>
 	<!-- Footer -->
 	<footer class="section">
 		<div class="container text-white position-relative">
