--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
 								</div>
 								<div class="form-group">
 									<label class="control-label" for="inputNumber">Message</label>
-									<input type="tel" class="form-control" id="inputNumber" required>
+									<input type="text" class="form-control" id="inputName" required>
 								</div>
 									<div class="form-group">
 									<label class="control-label" for="inputNumber">Password</label>
@@ -304,7 +304,7 @@
 
 		<div id="comments" class="comments-area">
 					    <h3 class="comments-title">
-					        Comments		
+					        Messageㄴ		
 					    </h3>
 					    <!-- .comments-title -->
 					    <ol class="comment-list">
