--- a/index.html
+++ b/index.html
@@ -399,7 +399,25 @@
 					        </li>
 					        <!-- #comment-## -->
 					    </ol>
-					    
+					    <nav aria-label="...">
+						<ul class="pagination mb-4 mb-md-0">
+							<li class="page-item disabled">
+								<span class="page-link rounded-0">Previous</span>
+							</li>
+							<li class="page-item active">
+								<span class="page-link">
+									1
+									<span class="sr-only">(current)</span>
+								</span>
+							</li>
+							<li class="page-item"><a class="page-link" href="#">2</a></li>
+							<li class="page-item"><a class="page-link" href="#">3</a></li>
+							<li class="page-item"><a class="page-link" href="#">4</a></li>
+							<li class="page-item">
+								<a class="page-link rounded-0" href="#">Next</a>
+							</li>
+						</ul>
+					</nav>
 					</div>
 		</div>
 	</section>
