--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 
 		<div id="comments" class="comments-area">
 					    <h3 class="comments-title">
-					        Messageㄴ		
+					        축하 메시지		
 					    </h3>
 					    <!-- .comments-title -->
 					    <ol class="comment-list">
