--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 			<h1 class="title">Invitation</h1>
 			<p class="m-auto">여호와를 섬기는 두 사람이 한 가정을 이루고자 합니다.</p>
 			<p class="m-auto">저희의 첫 발걸음을 함께 해주시기 바랍니다.</p>
-		    <div style="position: relative; height:0; padding-bottom: 56.25%; margin: 40px 0px;">
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ybhXVSAdIRE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: center; width:100%; height:100%;"></iframe>
+		    <div style="position: absolute; height:0; padding-bottom: 56.25%; margin: 40px 0px;">
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ybhXVSAdIRE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; width:100%; height:100%;"></iframe>
 				</div>
 	
 	</section>
