--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			<script src="js/vendor/html5shiv.min.js"></script>
 			<script src="js/vendor/respond.min.js"></script>
 		<![endif]-->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</head>
 <body data-spy="scroll" data-target="#navbarSupportedContent" data-offset="100">
 	<nav id="navbar" class="navbar navbar-expand-lg fixed-top p-0 text-white">
@@ -278,8 +279,8 @@
 									<input type="text" class="form-control" id="inputName" required>
 								</div>
 								<div class="form-group">
-									<label class="control-label" for="inputNumber">Message</label>
-									<input type="text" class="form-control" id="inputName" required>
+									<label class="control-label" for="inputMessage">Message</label>
+									<input type="text" class="form-control" id="inputMessage" required>
 								</div>
 									<div class="form-group">
 									<label class="control-label" for="inputNumber">Password</label>
@@ -289,6 +290,27 @@
 							<div class="col-md-4 align-self-end">
 								<button type="submit" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">Send</button>
 							</div>
+							    <script>
+        $(document).ready(function(){
+            $("#button").click(function(){
+                var inputName=$("#inputName").val();
+				var inputMessage=$("#inputMessage").val();
+                var inputNumber=$("#inputNumber").val();
+                $.ajax({
+                    url:'insert.php',
+                    method:'POST',
+                    data:{
+                        inputName:inputName,
+                        inputMessage:inputMessage,
+						inputNumber:inputNumber
+                    },
+                   success:function(data){
+                       alert(data);
+                   }
+                });
+            });
+        });
+    </script>
 						</div>
 						<div class="row">
 							<div class="col">
