--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 				<div class="col-sm-12 col-md-8 align-self-center">
 					<h2 class="title">Message</h2>
 					<h6 class="text-uppercase font-weight-bold mb-0">Will you Give us?</h6>
-					<form id="rsvp-form" action="form.php" method="post">
+					<form id="rsvp-form" action="insert.php" method="post">
 						<div class="row">
 							<div class="col-md-8 mb-3 m-md-0">
 								<div class="form-group">
