--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
 				var inputMessage=$("#inputMessage").val();
                 var inputNumber=$("#inputNumber").val();
                 $.ajax({
-                    url:'insert.php',
+                    url:'form.php',
                     method:'POST',
                     data:{
                         inputName:inputName,
