--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 			<script src="js/vendor/html5shiv.min.js"></script>
 			<script src="js/vendor/respond.min.js"></script>
 		<![endif]-->
-		
 	</head>
 <body data-spy="scroll" data-target="#navbarSupportedContent" data-offset="100">
 	<nav id="navbar" class="navbar navbar-expand-lg fixed-top p-0 text-white">
@@ -279,8 +278,8 @@
 									<input type="text" class="form-control" id="inputName" required>
 								</div>
 								<div class="form-group">
-									<label class="control-label" for="inputMessage">Message</label>
-									<input type="text" class="form-control" id="inputMessage" required>
+									<label class="control-label" for="inputNumber">Message</label>
+									<input type="text" class="form-control" id="inputName" required>
 								</div>
 									<div class="form-group">
 									<label class="control-label" for="inputNumber">Password</label>
@@ -289,8 +288,7 @@
 							</div>
 							<div class="col-md-4 align-self-end">
 								<button type="submit" class="btn btn-outline-dark rounded-0 px-3 py-1 font-weight-bold">Send</button>
-								</div>
-							   
+							</div>
 						</div>
 						<div class="row">
 							<div class="col">
