--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta charset=utf-8>
 		<meta name=description content="">
 		<meta name=viewport content="width=device-width, initial-scale=1">
-		<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 		<!-- Styles -->
 		<link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/vendor/slick.css">
@@ -366,7 +365,7 @@
 
 	$(function() {
 		$.ajax({
-			url: 'http://counsel.saapd.or.kr/api/guestbook-list/',
+			url: 'https://friacode.com/api/guestbook-list/',
 			type: 'GET',
 			success: function(response){
 				$("#guestbook-list").append(response);
@@ -380,7 +379,7 @@
 		var contents = $("#contents").val();
 
 		$.ajax({
-			url: 'http://counsel.saapd.or.kr/api/guestbook-create/',
+			url: 'https://friacode.com/api/guestbook-create/',
 			type: 'GET',
 			data: {name: name, contents: contents, password: password},
 			success: function(response){
