--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 		<div class="container">
 	
 			<div id="comments" class="comments-area">
-				<h3 class="comments-title">축하 메시지</h3>
+				<h3 class="comments-title">Message</h3>
 				<!-- .comments-title -->
 				<ol class="comment-list" id="guestbook-list"></ol>
 				<nav aria-label="...">
