--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 				</div>
 				<div class="col-sm-12 col-md-8 align-self-center">
 					<h2 class="title">Message</h2>
-					<h6 class="text-uppercase font-weight-bold mb-0">Will you Give us?</h6>
+					<h6 class="text-uppercase font-weight-bold mb-0">Guest Greetings</h6>
 					<form id="rsvp-form" action="form.php" method="post">
 						<div class="row">
 							<div class="col-md-8 mb-3 m-md-0">
@@ -313,7 +313,7 @@
 		<div class="container">
 	
 			<div id="comments" class="comments-area">
-				<h3 class="comments-title">Message</h3>
+				<h3 class="comments-title">Congratulatory Message</h3>
 				<!-- .comments-title -->
 				<ol class="comment-list" id="guestbook-list"></ol>
 				
