--- a/index.html
+++ b/index.html
@@ -275,8 +275,8 @@
 					<img src="img/rsvp-flower.png" class="parallax" alt="flower">
 				</div>
 				<div class="col-sm-12 col-md-8 align-self-center">
-					<h2 class="title">Message</h2>
-					<h6 class="text-uppercase font-weight-bold mb-0">The Guest Book</h6>
+					<h2 class="title">The Guest Book</h2>
+					<h6 class="text-uppercase font-weight-bold mb-0">Congratulatory Message</h6>
 					<form id="rsvp-form" action="form.php" method="post">
 						<div class="row">
 							<div class="col-md-8 mb-3 m-md-0">
