--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 							<div class="col-md-6 text-left">
 								<h3 class="accordion__item-subheading">When and Where</h3>
 								<p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>서울특별시 중구 퇴계로 18길 46 라루체<br> (구)서울특별시 중구 남산동 1가 13-6 라루체 </p>
-								<p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>2020년 2월 29일 16시<br>연회장 이용 가능 시간:15:30-18:00 </p>
+								<p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>2020년 2월 29일 16시<br>(연회장 이용 가능 시간:15:30-18:00) </p>
 									<h6 class="event__info-header font-weight-bold">전세버스</h6>
 						<p>워치타워성서책자협회 버스 출발 13:30<br>인솔자 : 최한별(010-3270-4818)<br><b><br>*이용시 미리 신청하여 주시기 바랍니다.</b> </p>
 			
