--- a/index.html
+++ b/index.html
@@ -24,11 +24,15 @@
 
 		<style>
 			.comment__text {
-				text-align: center;
+				text-align: left;
 			}
 
 			.comment__text p {
 				width: 100%;
+				font-size: 36px;
+				width: 50%;
+				margin: 0 auto;
+				color: #eab96a;
 			}
 		</style>
 
@@ -315,7 +319,7 @@
 			<div id="comments" class="comments-area">
 				<h3 class="comments-title">Congratulatory Message</h3>
 				<!-- .comments-title -->
-				<ol class="comment-list" id="guestbook-list"></ol>
+				<ol ></ol>
 				
 			</div>
 		</div>
