--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 			<div id="comments" class="comments-area">
 				<h3 class="comments-title">Congratulatory Message</h3>
 				<!-- .comments-title -->
-				<ol ></ol>
+				<ol class="comment-list" id="guestbook-list"></ol>
 				
 			</div>
 		</div>
