--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
 		<style>
 			.comment__text {
 				text-align: left;
+				font-size: 36px;
+				width: 50%;
+				margin: 0 auto;
+				color: #eab96a;
 			}
 
 			.comment__text p {
