--- a/index.html
+++ b/index.html
@@ -25,17 +25,12 @@
 		<style>
 			.comment__text {
 				text-align: left;
-				font-size: 36px;
-				width: 50%;
-				margin: 0 auto;
-				color: #eab96a;
 			}
 
 			.comment__text p {
+				text-align: center;
 				width: 100%;
-				font-size: 36px;
-				width: 50%;
-				margin: 0 auto;
+				font-size: 24px;
 				color: #eab96a;
 			}
 		</style>
