--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 			<div id="comments" class="comments-area">
 				<h3 class="comments-title">Congratulatory Message</h3>
 				<!-- .comments-title -->
-				<ol class="comments-title" id="guestbook-list"></ol>
+				<ol class="comment-list" id="text-center"></ol>
 				
 			</div>
 		</div>
