--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 						<h6 class="event__info-header font-weight-bold">자가용</h6>
 					
 						<ul>
-							<p><b>강남 방향에서 오실 때</b><br>반포대교 > 남산3호터널(주말에 남산 터널 통과시 무료) > 통과 후, 쌍용 플래티넘 아파트 앞에서 우회전 > 아파트 끼고 좌회전 후 라루체 진입 </p>			<p><b>서울역 방향에서 오실 때</b><br>서울역에서 퇴계로 방면으로 진입 > 회현역 > 회현사거리에서 직진 > 스테이트타워와 뉴오리엔탈호텔 사이로 우회전 > 왼쪽 첫번째 골목 라루체</p>
+							<p><b>강남 방향에서 오실 때</b><br>반포대교 > 남산3호터널(주말에 남산 터널 통과시 무료) > 통과 후, 쌍용 플래티넘 아파트 앞에서 우회전 > 아파트 끼고 좌회전 후 라루체</p>			<p><b>서울역 방향에서 오실 때</b><br>서울역에서 퇴계로 방면으로 진입 > 회현역 > 회현사거리에서 직진 > 스테이트타워와 뉴오리엔탈호텔 사이로 우회전 > 왼쪽 첫번째 골목 라루체</p>
 							<p><b>왕십리 방향에서 오실때</b><br>왕십리역 > 퇴계로에서 남대문 방향으로 직진 > 퇴계로2가 지하차도 > 회현사거리 신세계백화점 앞에서 유턴 후 직진 > 스테이트타워와 뉴오리엔탈호텔 사이로 우회전 > 왼쪽 첫번째 골목 라루체</p>
 						</ul>
 					</div>
