--- a/index.html
+++ b/index.html
@@ -106,8 +106,12 @@
 				<img src="img/story-flowers.png" alt="flowers">
 			</div>
 			<h1 class="title">Invitation</h1>
-			<p class="m-auto">여호와를 섬기는 두 사람이 한 가정을 이루고자 합니다.</p>
-			<p class="m-auto">저희의 첫 발걸음을 함께 해주시기 바랍니다.</p>
+			<p class="m-auto">저희 두 사람이 서로 진심으로 사랑해서</p>
+			<p class="m-auto">한 가정을 이루고자 합니다.</p>
+						<p class="m-auto">이 행복하고 뜻깊은 시간을</p>
+						<p class="m-auto">함께 해주시면 감사하겠습니다.</p>
+						<p class="m-auto">심두섭의 막내   신랑  심진수</p>
+						<p class="m-auto">정상기, 손선희의 막내   신부  정다인</p>	
 		    <div style="position: absolute; height:0; padding-bottom: 56.25%; margin: 40px 0px;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ybhXVSAdIRE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; width:100%; height:100%;"></iframe>
 				</div>
