--- a/index.html
+++ b/index.html
@@ -106,12 +106,12 @@
 				<img src="img/story-flowers.png" alt="flowers">
 			</div>
 			<h1 class="title">Invitation</h1>
-			<p class="m-auto">저희 두 사람이 서로 진심으로 사랑해서</p>
+	<p class="m-auto">저희 두 사람이 서로 진심으로 사랑해서</p>
 			<p class="m-auto">한 가정을 이루고자 합니다.</p>
 						<p class="m-auto">이 행복하고 뜻깊은 시간을</p>
-						<p class="m-auto">함께 해주시면 감사하겠습니다.</p>
+						<p class="m-auto">함께 해주시면 감사하겠습니다.</p><br>
 						<p class="m-auto">심두섭의 막내   신랑  심진수</p>
-						<p class="m-auto">정상기, 손선희의 막내   신부  정다인</p>	
+						<p class="m-auto">정상기, 손선희의 막내   신부  정다인</p>
 		    <div style="position: absolute; height:0; padding-bottom: 56.25%; margin: 40px 0px;">
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ybhXVSAdIRE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; width:100%; height:100%;"></iframe>
 				</div>
@@ -165,20 +165,25 @@
 				</div>
 				<div class="accordion__body">
 					<div id="collapseOne" class="collapse show" data-parent="#accordion">
-						<div class="row">
-							<h2 class="accordion__item-heading">Ceremony</h2>
-							<div class="col-md-6">
-							
-							</div>
-							<div class="col-md-6 text-left">
-								<h3 class="accordion__item-subheading">When and Where</h3>
-								<p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>서울특별시 중구 퇴계로 18길 46 라루체<br> (구)서울특별시 중구 남산동 1가 13-6 라루체 </p>
-								<p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>2020년 2월 29일 16시<br>(연회장 이용 가능 시간 15:30-18:00) </p>
-									<h6 class="event__info-header font-weight-bold">전세버스</h6>
-						<p>워치타워성서책자협회 버스 출발 13:30<br>인솔자 : 최한별(010-3270-4818)<br><b><br>*이용시 미리 신청하여 주시기 바랍니다.</b> </p>
-			
-						  </div>
-						</div>
+					  <div class="row">
+					    <div class="row">
+					      <h2 class="accordion__item-heading">Ceremony</h2>
+					      <div class="col-md-6"> <img class="accordion__item-img" src="img/ceremony.png" alt="ceremony"> </div>
+					      <div class="col-md-6 text-left">
+					        <h3 class="accordion__item-subheading">When and Where</h3>
+					        <p class="d-flex align-items-center"><i class="fa fa-2x fa-map-marker align-middle pr-1"></i>서울특별시 중구 퇴계로 18길 46 라루체<br>
+					          (구)서울특별시 중구 남산동 1가 13-6 라루체 </p>
+					        <p class="d-flex align-items-center"><i class="fa fa-2x fa-clock-o align-middle pr-1"></i>2020년 2월 29일 16시<br>
+					          (연회장 이용 가능 시간 15:30-18:00) </p>
+					        <h6 class="event__info-header font-weight-bold">전세버스</h6>
+					        <p>워치타워성서책자협회 버스 출발 13:30<br>
+					          인솔자 : 최한별(010-3270-4818)<br>
+					          <b><br>
+					            *이용시 미리 신청하여 주시기 바랍니다.</b></p>
+				          </div>
+				        </div>
+					    <h2 class="accordion__item-heading">&nbsp;</h2>
+					  </div>
 					</div>
 					<div id="collapseTwo" class="collapse" data-parent="#accordion">
 						<div class="row">
