--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	<p class="m-auto">저희 두 사람이 서로 진심으로 사랑해서</p>
 			<p class="m-auto">한 가정을 이루고자 합니다.</p>
 						<p class="m-auto">이 행복하고 뜻깊은 시간을</p>
-						<p class="m-auto">함께 해주시면 감사하겠습니다.</p>
+						<p class="m-auto">함께 해주시면 감사하겠습니다.</p><br>
 						<p class="m-auto">심두섭의 막내    신랑 심진수</p>
 						<p class="m-auto">정상기,손선희의 막내    신부 정다인</p>
 		    <div style="position: absolute; height:0; padding-bottom: 56.25%; margin: 40px 0px;">
