--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 				<div class="accordion__body">
 					<div id="collapseOne" class="collapse show" data-parent="#accordion">
 						<div class="row">
-							<h2 class="accordion__item-heading">Ceremony</h2>
+							<h2 class="accordion__item-heading"></h2>
 							<div class="col-md-6">
 								<img class="accordion__item-img" src="img/ceremony.png" alt="ceremony">
 							</div>
