--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 				<img src="img/story-flowers.png" alt="flowers">
 			</div>
 			<h1 class="title">Invitation</h1>
-	<p class="m-auto">저희 두 사람이 서로 진심으로 사랑해서 한 가정을 이루고자 합니다.</p>
+	<p class="m-auto">저희 두 사람이 서로를 진심으로 사랑해서 한 가정을 이루고자 합니다.</p>
 						<p class="m-auto">이 행복하고 뜻깊은 시간을 함께 해주시면 감사하겠습니다.</p>
 						<br>
 						<p class="m-auto">심두섭의 막내 &nbsp;&nbsp;신랑 심진수</p>
