--- a/index.html
+++ b/index.html
@@ -244,6 +244,9 @@
 					<div class="slider__item">
 						<img src="img/slider/gallery-8.jpg" alt="slider">
 					</div>
+					<div class="slider__item">
+						<img src="img/slider/gallery-9.jpg" alt="slider">
+					</div>
 				</div>
 				<div class="gallery__slider-num d-none d-lg-flex">
 					<div class="gallery__slider-current pr-1"></div>
