--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
 		<meta name=description content="">
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<meta property="og:type" content="website">
-		<meta property="og:url" content="https://jinsu-dain.github.io/wedding-card/">
+		<meta property="og:url" content="http://jinsu-dain.github.io/wedding-card/">
 		<meta property="og:title" content="Jinsu&Dain's Wedding Invitation">
 		<meta property="og:description" content="진수&다인의 모바일 청첩장">
 		<meta property="og:image" content="img/slider/gallery-1.jpg">
+
 		<!-- Styles -->
 		<link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/vendor/slick.css">
