--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<meta name=viewport content="width=device-width, initial-scale=1">
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="http://jinsu-dain.github.io/wedding-card/">
-
+		<meta property="og:title" content="Jinsu&Dain's Wedding Invitation">
+		<meta property="og:description" content="진수&다인의 모바일 청첩장">
 		<meta property="og:image" content="http://jinsu-dain.github.io/wedding-card/img/gallery-10.jpg">
 
 		<!-- Styles -->
