--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
 			</div>
 		</div>
 	</nav>
-
+	<div id="loader" class="loader">
+		<div id="my-svg"></div>
+		<div class="loader-img text-center">
+			<img src="img/story-flowers.png" alt="flowers">
+		</div>
+	</div>
 	<div id="top" class="main-hero">
 		<div class="c-hero-banner c-hero-banner--main">
 			<div class="cover"></div>
