--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<meta property="og:url" content="http://jinsu-dain.github.io/wedding-card/">
 		<meta property="og:title" content="Jinsu&Dain's Wedding Invitation">
 		<meta property="og:description" content="진수&다인의 모바일 청첩장">
-		<meta property="og:image" content="img/banner.jpg">
+		<meta property="og:image" content="img/11.png">
 
 		<!-- Styles -->
 		<link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
