--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link rel="stylesheet" type="text/css" href="css/vendor/bootstrap.min.css">
 		<link rel="stylesheet" type="text/css" href="css/vendor/slick.css">
 		<link rel="stylesheet" type="text/css" href="css/vendor/slick-theme.css">
-	
+		<link rel="stylesheet" type="text/css" href="css/vendor/lightbox.min.css">
 		<!-- Main style -->
 		<link rel="stylesheet" type="text/css" href="css/main.css">
 		<!-- Fonts -->
@@ -326,8 +326,10 @@
 			<div class="copyright text-center">&copy; Copyright Jinsu&Dain 2020. All right Reserved.</div>
 		</div>
 	</footer>
+<script src="js/vendor/jquery.min.js"></script>
 <script src="js/vendor/jquery.easing.1.3.js"></script>
 <script src="js/vendor/popper.min.js"></script>
+<script src="js/vendor/bootstrap.min.js"></script>
 <script src="js/vendor/slick.min.js"></script>
 <script src="js/vendor/vivus.min.js"></script>
 <script src="js/vendor/circletype.min.js"></script>
