--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ybhXVSAdIRE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="position: absolute; width:100%; height:100%;"></iframe>
 				</div>
 				<div style="position: relative; max-width: 100%; padding-bottom: 56.25%; height: 0;">
-					<iframe width="320" height="180" src="https://youtu.be/O1ZolbZ6_Ok" frameborder="0" allowfullscreen="" style="position: absolute; position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
+					<iframe width="320" height="180" src="https://www.youtube.com/embed/O1ZolbZ6_Ok" frameborder="0" allowfullscreen="" style="position: absolute; position: absolute; top: 0; left: 0; width: 100%; height: 100%;"></iframe>
 					</div>
 					
 				
