--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		<div class="c-hero-banner c-hero-banner--main">
 			<div class="cover"></div>
 			<div class="c-hero-banner__section c-hero-banner__image">
-				<img class="lazyload" src="img/banner.jpg" alt="image">
+				<img class="lazyload" src="img/banner.jpg" alt="image">y
 			</div>
 			<div class="mask">
 				<img src="img/mask.png" alt="">
